assign user to game team
